--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,16 @@ cmake_minimum_required(VERSION 3.24)
 project(sakora)
 
 set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -pedantic -Wimplicit-fallthrough -Wsequence-point -Wswitch-default -Wswitch-unreachable -Wswitch-enum -Wstringop-truncation -Wbool-compare -Wtautological-compare -Wfloat-equal -Wshadow=global -Wpointer-arith -Wpointer-compare -Wcast-align -Wcast-qual -Wwrite-strings -Wdangling-else -Wlogical-op -Wconversion -Werror")
+set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -pedantic -Wimplicit-fallthrough -Wsequence-point -Wswitch-unreachable -Wswitch-enum -Wstringop-truncation -Wbool-compare -Wtautological-compare -Wfloat-equal -Wshadow=global -Wpointer-arith -Wpointer-compare -Wcast-align -Wcast-qual -Wwrite-strings -Wdangling-else -Wlogical-op -Wconversion -Werror")
 
 file(GLOB SRC_FILES
         "main.cpp",
         "error/*.h", "error/*.cpp",
-        "Fronted/lexer/*.h", "Fronted/lexer/*.cpp"
-        "Fronted/parser/*.h", "Fronted/parser/*.cpp"
+        "Fronted/lexer/*.h", "Fronted/lexer/*.cpp",
+        "Fronted/parser/*.h", "Fronted/parser/*.cpp",
+        "Backend/visitor/*.h", "Backend/visitor/*.cpp",
+        "Backend/type/*.h", "Backend/type/*.cpp",
+        "Backend/scope/*.h", "Backend/scope/*.cpp"
         )
 
         
