Update: Happy new year!!!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ file(GLOB SRC_FILES
         "Backend/type/*.h", "Backend/type/*.cpp",
         "Backend/scope/*.h", "Backend/scope/*.cpp",
         "Backend/object/*.h", "Backend/object/*.cpp",
-        "sakVM/core/*.h", "sakVM/core/*.cpp"
+        "sakVM/core/*.h", "sakVM/core/*.cpp",
+        "sakVM/*.h", "sakVM/*.cpp"
         )
 
         
