--- a/.github/workflows/build_upload.yaml
+++ b/.github/workflows/build_upload.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
-          name: yolang-linux
+          name: sakora-linux
           path: ${{github.workspace}}/build
 
   build-windows:
