--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -pedantic -Wimplicit-f
 
 file(GLOB SRC_FILES
         "main.cpp",
+        "sakConsole/*.h", "sakConsole/*.cpp",
         "error/*.h", "error/*.cpp",
         "Fronted/lexer/*.h", "Fronted/lexer/*.cpp",
         "Fronted/parser/*.h", "Fronted/parser/*.cpp",
