Fix: fix the spelling bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ file(GLOB SRC_FILES
         "main.cpp",
         "sakConsole/*.h", "sakConsole/*.cpp",
         "error/*.h", "error/*.cpp",
-        "Fronted/lexer/*.h", "Fronted/lexer/*.cpp",
-        "Fronted/parser/*.h", "Fronted/parser/*.cpp",
+        "Frontend/lexer/*.h", "Frontend/lexer/*.cpp",
+        "Frontend/parser/*.h", "Frontend/parser/*.cpp",
         "Backend/visitor/*.h", "Backend/visitor/*.cpp",
         "Backend/type/*.h", "Backend/type/*.cpp",
         "Backend/scope/*.h", "Backend/scope/*.cpp",
