--- a/.github/workflows/build_upload.yaml
+++ b/.github/workflows/build_upload.yaml
@@ -1,10 +1,10 @@
 name: Compile & Upload
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+#on:
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
