--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ file(GLOB SRC_FILES
         "Backend/scope/*.h", "Backend/scope/*.cpp",
         "Backend/object/*.h", "Backend/object/*.cpp",
         "Backend/env/*.h", "Backend/env/*.cpp",
-        "Backend/sakCalc/*.h", "Backend/sakCalc/*.cpp",
+        "Backend/sakVM/*.h", "Backend/sakVM/*.cpp",
         "Runner/*.h", "Runner/*.cpp",
         "Test/*.h", "Test/*.cpp"
         )
